fix: :lipstick: change row-gap

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
   border: 1px solid var(--black);
   border-radius: 18px;
   display: grid;
-  row-gap: 12px;
+  row-gap: 10px;
   box-shadow: 8px 8px 0px var(--black);
   margin-bottom: 20px;
 }
